@@ -1,5 +1,11 @@
 2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/spad.lisp, src/interp/vmlisp.lisp:
+	Misc cleanups.
+
+
+2011-04-21  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/interp/property.lisp, src/interp/preparse.lisp
 	src/interp/macros.lisp: Eliminate use of REPEAT and
 	COLLECT form Lisp files.
